--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
  
   "dependencies": {
-    "bower": "~1.3.8",
+    "bower": ">=1.8.8",
     "grunt-cli": "~0.1.13",
     "glob": "~4.0.5",
     "async": "~0.9.0",
